--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -25,6 +25,8 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'addexpense' %}">Add Expense</a>
                         <a class="nav-item nav-link" href="{% url 'addincome' %}">Add Income</a>
+                        <a class="nav-item nav-link" href="{% url 'report' %}">Report</a>
+
 
                     </div>
                 </div>
