--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -16,20 +16,32 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">Finance Tracer</a>
+                <a class="navbar-brand mr-4" href="/">Finance Tracker</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
+                        {%if user.is_authenticated%}
                         <a class="nav-item nav-link" href="{% url 'addexpense' %}">Add Expense</a>
                         <a class="nav-item nav-link" href="{% url 'addincome' %}">Add Income</a>
                         <a class="nav-item nav-link" href="{% url 'report' %}">Report</a>
-
-
+                    </div>
+                    <div class="navbar-nav ml-auto text-right">
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-item nav-link"
+                                style="border: none; background: none; cursor: pointer; padding: 0;">
+                                Logout
+                            </button>
+                        </form> {%else%}
+                        <a class="nav-item nav-link" href="{%url 'login' %}">Login</a>
+                        <a class="nav-item nav-link" href="{%url 'register' %}">Register</a>
+                        {%endif%}
                     </div>
                 </div>
+
             </div>
         </nav>
     </header>
