--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -27,6 +27,10 @@
                         <a class="nav-item nav-link" href="{% url 'addexpense' %}">Add Expense</a>
                         <a class="nav-item nav-link" href="{% url 'addincome' %}">Add Income</a>
                         <a class="nav-item nav-link" href="{% url 'report' %}">Report</a>
+                        <a class="nav-item nav-link" href="{% url 'category' %}">Category</a>
+
+                        <a class="nav-item nav-link" href="{% url 'addbudget' %}">Add Budget</a>
+
                     </div>
                     <div class="navbar-nav ml-auto text-right">
                         <form method="post" action="{% url 'logout' %}">
