--- a/finance/templates/finance/delete.html
+++ b/finance/templates/finance/delete.html
@@ -14,7 +14,7 @@
             <a class="btn btn-outline-secondary" href="{% url 'updateexpense' expense.id %}">Cancel</a>
         </div>
     </form>
-    {%else%}
+    {%elif type == "income"%}
     <h1>Delete Income</h1>
     <form action="{%url 'deleteincome' income.id%}" method="post">
         {% csrf_token %}
@@ -27,6 +27,20 @@
             <a class="btn btn-outline-secondary" href="{% url 'updateincome' income.id %}">Cancel</a>
         </div>
     </form>
+    {%elif%}
+    <h1>Delete Budget</h1>
+    <form action="{%url 'deletebudget' category.id%}" method="post">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Delete</legend>
+            <h2>Are you sure you want to delete "{{ category.name }}"</h2>
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
+            <a class="btn btn-outline-secondary" href="{% url 'category' %}">Cancel</a>
+        </div>
+    </form>
+
     {%endif%}
 </div>
 {% endblock body %}
